test/libsolidity/syntaxTests/constructor/interface_constructor.sol
interface I {
	constructor();
}
// ----
// Warning: (15-29): Functions in interfaces should be declared external.
// TypeError: (15-29): Constructor cannot be defined in interfaces.
// TypeError: (15-29): Constructor must be implemented if declared.
